[package]
name = "agbrs-capture"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tool for agbrs projects that captures frames from mGBA windows and creates GIFs"
license = "MIT"
repository = "https://github.com/zpg6/agbrs-capture"

[[bin]]
name = "agbrs-capture"
path = "src/main.rs"

[dependencies]
screenshots = "0.7"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
xcap = "0.0.12"
gif = "0.13"
clap = { version = "4.4", features = ["derive"] }
